--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 .mh-900 {
     min-height: 900px;
 }
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+.img-profile {
+    width: 40px;
+    height: 40px;
+    border: 2px solid rgba(112, 112, 112, 0.562);
+}
+
+
